@@ -1,7 +1,8 @@
 0.1711
     - renamed EXPERIMENTAL available_type_name to available_typename
     - renamed EXPERIMENTAL available_data_type to available_datatype
-    - added EXPERIMENTAL DBIx::Custom::Where map_if method
+    - added EXPERIMENTAL DBIx::Custom::Where if method
+    - added EXPERIMENTAL DBIx::Custom::Where map attribute
 0.1710
     - use more DBIx::Custom information in sub modules to decrease bugs
       (very sorry, this change can't keep backword compatible,
